<resources>
    //Hoot app in google console should be an old created app
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyC85RQEkaJ5mjDZDCj3qnq8cdR_5igNed0
    </string>

    <string name="app_name">Rawag</string>
    <string name="home_tab">Home</string>
    <string name="categories_tab">Categories</string>
    <string name="favourites_tab">Favourites</string>
    <string name="home_title">Home</string>
    <string name="profile">Profile</string>
    <string name="add_Product">Add Product</string>
    <string name="about">About App</string>
    <string name="terms">Terms and Condition</string>
    <string name="contactUs">Contact Us</string>
    <string name="settings">Settings</string>
    <string name="LogOut">LogOut</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading</string>
    <string name="load_failed">Load Failed</string>
    <string name="load_end">Load Complete</string>
    <string name="you_must_login">You must login first!</string>
    <string name="login">Login</string>
    <string name="searchTitle">Search</string>
    <string name="search_what_you_need">search what you need</string>
    <string name="search">Show results</string>
    <string name="my_products">My Products</string>
    <string name="comments">Comments</string>
    <string name="description">Description</string>
    <string name="social">Social Links</string>
    <string name="editProfile">Edit Information</string>
    <string name="personalInfo">Information</string>
    <string name="socialLinks">Socaial Links</string>
    <string name="username">Username</string>
    <string name="phone">Phone Number</string>
    <string name="email">Email</string>
    <string name="desc">Description</string>
    <string name="location">location</string>
    <string name="choose_image">Choose Image</string>
    <string name="change_password">Change Password</string>
    <string name="message">Message</string>
    <string name="sendMessage">Send</string>
    <string name="language">Language</string>
    <string name="arabic">اللغة العربية</string>
    <string name="english">English</string>
    <string name="notifications">Notification</string>
    <string name="password">Password</string>
    <string name="saveChanges">Save Changes</string>
    <string name="skip">Continue as visitor</string>
    <string name="forgetPassword">Forget your password?</string>
    <string name="haveNoAccount">Need new account</string>
    <string name="clickHere">click here</string>
    <string name="resetPassword">Reset Password</string>
    <string name="confirmBtn">Confirm</string>
    <string name="code">Code</string>
    <string name="enterCodeMessage">Please enter the code we send to your phone number.</string>
    <string name="resendCode">Resend Code?</string>
    <string name="newPassword">New Password</string>
    <string name="confirmNewPassword">Confirm New Password</string>
    <string name="register">Create new account</string>
    <string name="click_to_get_your_location">Click to get your location</string>
    <string name="newAccount">New Account</string>
    <string name="pickLocation">Pick Location</string>
    <string name="registering_into_our_app_you_agreed_to">registering into our app you agreed to</string>
    <string name="haveAccount">Already have account</string>
    <string name="subCategoriesTitle">Category Name</string>
    <string name="diamond_package">Diamond Package</string>
    <string name="pay">Pay</string>
    <string name="silver_package">Silver Package</string>
    <string name="gold_package">Gold Package</string>
    <string name="choose_payment_method">Choose Payment Method</string>
    <string name="send">Send</string>
    <string name="price_today">Price today</string>
    <string name="show_period">Show Period</string>
    <string name="productsTitle">SubCategory Name</string>
    <string name="myAdsTitle">My Products</string>
    <string name="call">Make Call</string>
    <string name="commentsTitle">Comment</string>
    <string name="write_comment">write comment…</string>
    <string name="delete">Delete</string>
    <string name="hide">Hide</string>
    <string name="report_reason">Report reason</string>
    <string name="requestPermission">Request Permission</string>
    <string name="errorSelectImage">Error selecting image</string>
    <string name="generalError">Error Happened</string>
    <string name="empty_field">Empty Field</string>
    <string name="LogIn">LogIn</string>
    <string name="loggingIn">LogIn ,Please wait.</string>
    <string name="login_success">Login Completed Successfully</string>
    <string name="noInternet">No Internet Connection.</string>
    <string name="agree_to_terms">You have to agree to our terms and conditions first.</string>
    <string name="select_category">Select Category</string>
    <string name="choose_category">Choose Category</string>
    <string name="select_sub_category">choose SubCategory</string>
    <string name="choose_avatar">Choose Profile Picture</string>
    <string name="creatingNewAccount">Creating your account,please wait.</string>
    <string name="you_have_no_ads">There is no ads yet.</string>
    <string name="no_link">No Link for this social media</string>
    <string name="edit_profile_success">Profile Updated Successfully</string>
    <string name="changingProfile">Changing your info....</string>
    <string name="oldPassword">Old password</string>
    <string name="password_change_success">Password change successfully</string>
    <string name="wait">please wait</string>
    <string name="social_media_links">Social media links</string>
    <string name="please_enter_link">Please enter link</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instgram">Instgram</string>
    <string name="snapChat">SnapChat</string>
    <string name="youtube">Youtube</string>
    <string name="changes_saved">Changes Saved</string>
    <string name="error_link">Url not valid</string>
    <string name="currency">SAR</string>
    <string name="select_country">Select Country</string>
    <string name="select_city">Select City</string>
    <string name="choose_images">Please Choose Images</string>
    <string name="mada">Mada</string>
    <string name="sdad">Sdad</string>
    <string name="masterCard">Master Card</string>
    <string name="visa">Visa</string>
    <string name="selectPaymentMethod">Select Payment method first.</string>
    <string name="uploadingAd">Uploading… please wait.</string>
    <string name="uploadAdSuccess">Upload Completed Successfully.</string>
    <string name="contactingUS">Sending your message</string>
    <string name="contactSuccess">Your message sent successfully</string>
    <string name="add_rate">Add Rate</string>
    <string name="submit">Submit</string>
    <string name="abort">Cancel</string>
    <string name="success">Success</string>
    <string name="select_rate">Select rate first</string>
    <string name="empty_comments">No Comments on this profile yet swipe up to send first comment</string>
    <string name="errorSendReport">Error sending your report</string>
    <string name="empty_category">Category is empty.</string>
    <string name="addedToFavourites">Added to favourites</string>
    <string name="removedFromFavourites">Removed from favourites</string>
    <string name="deleted">Delete Complete</string>
    <string name="hided">Hide Completed</string>
    <string name="EmptyFavList">Favourite list is empty</string>
    <string name="no_search_result">No search result founded</string>
    <string name="countries">Countries</string>
    <string name="cities">Cities</string>
    <string name="show_results">Show Results</string>
    <string name="searchResult">Search Result</string>
    <string name="errorUploadAd">Error Uploading Ad.</string>
    <string name="editAdTitle">Edit Ad</string>
    <string name="edit_ad_information">Edit Ad Information</string>
    <string name="editAdInfo">Edit Ad info</string>
    <string name="saved">Changes Saved</string>
    <string name="confirmDeleteMessage">Are you sure you want to delete this ad?</string>
    <string name="add_image">Add Image</string>
    <string name="saveImages">Save Image Changes</string>
    <string name="delete_image_message">This image will be deleted.</string>
    <string name="noImagesFound">No Images found to upload.</string>
</resources>
