<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context="com.elwaha.rawag.ui.main.choosePaymentMethod.ChoosePaymentMethodFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/backImgv"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:src="@drawable/back_image" />

                <TextView
                    android:id="@+id/title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="18dp"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/add_Product"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="@android:color/white" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/choose_payment_method"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@android:color/white" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:id="@+id/paymentGroup">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:id="@+id/visa"
                android:text="@string/visa"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/black" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:id="@+id/masterCard"
                android:text="@string/masterCard"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/black" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/sdad"
                android:id="@+id/sdad"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/black" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/mada"
                android:id="@+id/mada"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/black" />
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sendMbtn"
            style="@style/Widget.MaterialComponents.Button"
            app:cornerRadius="20dp"
            app:rippleColor="@color/colorAccent"
            app:strokeColor="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="24dp"
            android:layout_marginTop="54dp"
            android:layout_marginEnd="24dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/send"
            android:textAllCaps="false" />

    </LinearLayout>
</ScrollView>